--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chicago Club Makers - Your premier golf club repair facility specializing in regripping services. Unlock your potential on the greens with our customized solutions.">
     <title>Chicago Club Makers</title>
     <style>
         body {
