--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chicago Club Makers - Your premier golf club repair facility specializing in regripping services. Unlock your potential on the greens with our customized solutions.">
-    <title>Chicago Club Makers</title>
+    <title>Chicago Club Makers - Same Day Club Regripping Chicago</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=DM+Sans:wght@400;700&display=swap">
     <style>
         body {
@@ -112,8 +112,8 @@
     <p>Unlock Your Potential on the Greens with Chicago Club Makers. At Chicago Club Makers, we understand that every swing is unique, and your golf clubs should be too...</p>
 
     <div class="regripping-section">
-        <h3>Specializing in Regripping</h3>
-        <p>Chicago Club Makers is your go-to destination for expert regripping services. Whether you bring in your own grip or choose from our selection of "<a href="https://stargrip.com/" target="_blank">Star Grips</a>," we are a certified Star Grip partner committed to delivering excellence. Our grip fitting service ensures you get the right size grip for your optimal performance on the golf course.</p>
+        <h3>Specializing in Same Day Regripping</h3>
+        <p>Chicago Club Makers is your go-to destination for expert regripping services. Whether you bring in your own grip or choose from our selection of "<a href="https://stargrip.com/" target="_blank">Star Grips</a>," we are a certified Star Grip partner committed to delivering excellence. Star Grips are manufactured in the USA and use quality materials. Our grip fitting service ensures you get the right size grip for your optimal performance on the golf course. We install Star Grips using an air compressor so not only can we install them same day, you can also hit with them immediately.</p>
     </div>
 
     <div class="all-services">
@@ -147,8 +147,8 @@
         <div class="address-section">
             <h3>Visit Us</h3>
             <p>Chicago Club Makers<br>
-               123 Golf Avenue<br>
-               Chicago, IL 60601<br>
+               4015 North Rockwell Street<br>
+               Chicago, IL 60618<br>
                USA</p>
         </div>
     </div>
