--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
 
     <div class="regripping-section">
         <h3>Specializing in Same Day Regripping</h3>
-        <p>Chicago Club Makers is your go-to destination for expert regripping services. Whether you bring in your own grip or choose from our selection of "<a href="https://stargrip.com/" target="_blank">Star Grips</a>," we are a certified Star Grip partner committed to delivering excellence. Star Grips are manufactured in the USA and use quality materials. Our grip fitting service ensures you get the right size grip for your optimal performance on the golf course. We install Star Grips using an air compressor so not only can we install them same day, you can also hit with them immediately.</p>
+        <p>Chicago Club Makers is your go-to destination for expert regripping services. Whether you bring in your own grip or choose from our selection of "<a href="https://stargrip.com/" target="_blank">Star Grips</a>," we are a certified Star Grip partner committed to delivering excellence. Star Grips are manufactured in the USA and use quality materials.</p>
+        <p>Our grip fitting service ensures you get the right size grip for your optimal performance on the golf course. We install Star Grips using an air compressor so not only can we install them same day, you can also hit with them immediately.</p>
     </div>
 
     <div class="all-services">
@@ -145,7 +146,7 @@
         </div>
 
         <div class="address-section">
-            <h3>Visit Us</h3>
+            <h3>Visit Us (by appointment Only for now)</h3>
             <p>Chicago Club Makers<br>
                4015 North Rockwell Street<br>
                Chicago, IL 60618<br>
