--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chicago Club Makers - Your premier golf club repair facility specializing in regripping services. Unlock your potential on the greens with our customized solutions.">
     <title>Chicago Club Makers - Same Day Club Regripping Chicago</title>
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=DM+Sans:wght@400;700&display=swap">
     <style>
         body {
