--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
 
         <div class="address-section">
-            <h3>Visit Us (by appointment Only for now)</h3>
+            <h3>Visit Us (by appointment only for now)</h3>
             <p>Chicago Club Makers<br>
                4015 North Rockwell Street<br>
                Chicago, IL 60618<br>
