--- a/index.html
+++ b/index.html
@@ -4,20 +4,14 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BVFV4RT7G"></script>
     <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    
-    gtag('config', 'G-5BVFV4RT7G');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'G-5BVFV4RT7G');
     </script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chicago Club Makers - Your premier golf club repair facility specializing in regripping services. Unlock your potential on the greens with our customized solutions.">
-    <title>Chicago Club Makers - Same Day Club Regripping Chicago</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=DM+Sans:wght@400;700&display=swap">
     <style>
+        /* Inline critical CSS here */
         body {
             background-color: #f8f8f8;
             font-family: 'DM Sans', sans-serif;
@@ -100,7 +94,6 @@
             text-align: left;
             margin-top: 1rem;
         }
-
         @media (max-width: 600px) {
             .footer-sections {
                 flex-direction: column;
@@ -110,63 +103,9 @@
             }
         }
     </style>
+    <noscript>
+        <!-- Provide fallback for users with JavaScript disabled -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:wght@400&family=DM+Sans:wght@400;700&display=swap">
+    </noscript>
 </head>
 <body>
-
-<div class="header">
-    <h1 style="font-size: 3rem;">Chicago Club Makers</h1>
-    <p>Your Premier Golf Club Repair Facility</p>
-</div>
-
-<div class="main-content">
-    <h2>Welcome to Chicago Club Makers</h2>
-    <p>Unlock Your Potential on the Greens with Chicago Club Makers. At Chicago Club Makers, we understand that every swing is unique, and your golf clubs should be too...</p>
-
-    <div class="regripping-section">
-        <h3>Specializing in Same Day Regripping</h3>
-        <p>Chicago Club Makers is your go-to destination for expert regripping services. Whether you bring in your own grip or choose from our selection of "<a href="https://stargrip.com/" target="_blank">Star Grips</a>," we are a certified Star Grip partner committed to delivering excellence. Star Grips are manufactured in the USA and use quality materials.</p>
-        <p>Our grip fitting service ensures you get the right size grip for your optimal performance on the golf course. We install Star Grips using an air compressor so not only can we install them same day, you can also hit with them immediately.</p>
-    </div>
-
-    <div class="all-services">
-        <h3>All Services</h3>
-        <ul>
-            <li><strong>Grip Your Success:</strong> Say goodbye to worn-out grips that compromise your swing...</li>
-            <li><strong>Club Regripping:</strong> Transform your clubs with our expert regripping service tailored to your needs. We specialize in providing custom regripping solutions that cater to the unique demands of your game, ensuring a comfortable and effective grip for every swing.</li>
-            <li><strong>Precision Repairs:</strong> Trust Chicago Club Makers to breathe new life into your clubs with our meticulous repair services...</li>
-            <li><strong>Customization for Champions:</strong> Elevate your game with customized golf clubs that reflect your personality and playing style...</li>
-        </ul>
-    </div>
-
-    <div class="why-choose">
-        <h3>Why Choose Chicago Club Makers?</h3>
-        <ul>
-            <li><strong>Expertise You Can Trust:</strong> With years of experience in the industry...</li>
-            <li><strong>Unparalleled Customer Service:</strong> We prioritize your satisfaction above all else...</li>
-            <li><strong>Quick Turnaround:</strong> We understand the importance of your golf clubs...</li>
-        </ul>
-    </div>
-
-</div>
-
-<div class="footer">
-    <div class="footer-sections">
-        <div class="contact-section">
-            <h3>Contact Us</h3>
-            <a href="mailto:contact@chicagoclubmakers.com" class="button">Email: contact@chicagoclubmakers.com</a>
-        </div>
-
-        <div class="address-section">
-            <h3>Visit Us (by appointment only for now)</h3>
-            <p>Chicago Club Makers<br>
-               4015 North Rockwell Street<br>
-               Chicago, IL 60618<br>
-               USA</p>
-        </div>
-    </div>
-
-    <p>Chicago Club Makers - Crafting Excellence, One Swing at a Time.</p>
-</div>
-
-</body>
-</html>
